# OBS-Script-Software

./: .gitignore  LICENSE  README.md  obs_p.py  pyproject.toml
.github/workflows/: release.yml  test.yml  test2.yml  test2.yml.ori
docs/source/: box.rst  conf.py  fits.rst  index.rst  installation.rst  menu.rst  overview.rst  paramnote.rst
scripts/: FileEdit.py  Graphic.py  Gvars.py  MainApp.py  Parameters.py  obs_p.py  obs_pS.py  pyproject.toml
scripts/compiled/: nt2c.icns
