[tool.poetry]
name = "obs_p.py"
version = "0.0"
description = "OBS Script Software"
authors = ["Jeremy"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6, <3.9"
colour = "^0.1.5"
numpy = "^1.18.5"
Pillow = "^8.0.1"
pyregion = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
