[tool.poetry]
name = "obs_p.py"
version = "1.0.0"
description = "OBS Script Software"
authors = ["Jeremy"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
astropy = ">=3.0, <6.0"
colour = "^0.1.5"
n_const = "^1.0.4"
numpy = "^1.21.5"
Pillow = "^9.0.1"
pyregion = "^2.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
