[tool.poetry]
name = "obs_p.py"
version = "1.0.1"
description = "OBS Script Software"
authors = ["Jeremy"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
astropy = ">=5.0.3, <6.0"
colour = "^0.1.5"
n_const = "^1.0.4"
numpy = "^1.21.5"
Pillow = "^9.3.0"
pyregion = "^2.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
